# ros2-migration

arena/arena-rosnav/arena_bringup/launch/: start_arena.launch.py
arena/arena-rosnav/arena_bringup/launch/utils/: fake_localization.launch.py
src/arena/arena-rosnav/arena_bringup/launch/: start_arena.launch.py
src/arena/arena-rosnav/arena_bringup/launch/utils/: map_server.launch.py
src/arena/arena-rosnav/arena_bringup/scripts/: repos
src/arena/arena-rosnav/task_generator/: package.xml
src/arena/arena-rosnav/task_generator/scripts/: filewatcher.py  main.py  scenario_helper.py  server.py  utils.py
src/arena/arena-rosnav/task_generator/task_generator/: constants.py  shared.py  task_generator_node.py  utils.py
src/arena/arena-rosnav/task_generator/task_generator/manager/: robot_manager.py  world_manager.py
src/arena/arena-rosnav/task_generator/task_generator/manager/entity_manager/: crowdsim_manager.py  entity_manager.py  flatland_manager.py  pedsim_manager.py  utils.py
src/arena/arena-rosnav/task_generator/task_generator/simulators/: flatland_simulator.py  gazebo_simulator.py
src/arena/arena-rosnav/task_generator/task_generator/tasks/: task_factory.py
src/arena/arena-rosnav/task_generator/task_generator/tasks/modules/: benchmark.py  dynamic_map.py  rviz_ui.py  staged.py
src/arena/arena-rosnav/task_generator/task_generator/tasks/robots/: __init__.py  guided.py  scenario.py
src/arena/utils/flatland/flatland_server/: package.xml
