<?xml version="1.0"?>
<package format="3">
  <name>flatland_server</name>
  <version>1.1.3</version>
  <description>The flatland_server package</description>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/avidbots/flatland</url>

  <maintainer email="joseph@avidbots.com">Joseph Duchesne</maintainer>
  <author email="joseph@avidbots.com">Joseph Duchesne</author>
  <author>Chunshang Li</author>
  <author>Mike Brousseau</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>flatland_msgs</build_depend>
  <build_depend>lua-dev</build_depend>

  <exec_depend>opencv</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>flatland_msgs</exec_depend>
  <exec_depend>lua-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <flatland_server plugin="${prefix}/flatland_plugins.xml" />
  </export>
</package>
